@@ -15,21 +15,21 @@
  */
 package com.ibm.websphere.samples.daytrader.mdb;
 
-import javax.annotation.PostConstruct;
-import javax.annotation.Resource;
-import javax.ejb.ActivationConfigProperty;
-import javax.ejb.MessageDriven;
-import javax.ejb.MessageDrivenContext;
-import javax.ejb.TransactionAttribute;
-import javax.ejb.TransactionAttributeType;
-import javax.ejb.TransactionManagement;
-import javax.ejb.TransactionManagementType;
-import javax.enterprise.inject.Any;
-import javax.enterprise.inject.Instance;
-import javax.inject.Inject;
-import javax.jms.Message;
-import javax.jms.MessageListener;
-import javax.jms.TextMessage;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.Resource;
+import jakarta.ejb.ActivationConfigProperty;
+import jakarta.ejb.MessageDriven;
+import jakarta.ejb.MessageDrivenContext;
+import jakarta.ejb.TransactionAttribute;
+import jakarta.ejb.TransactionAttributeType;
+import jakarta.ejb.TransactionManagement;
+import jakarta.ejb.TransactionManagementType;
+import jakarta.enterprise.inject.Any;
+import jakarta.enterprise.inject.Instance;
+import jakarta.inject.Inject;
+import jakarta.jms.Message;
+import jakarta.jms.MessageListener;
+import jakarta.jms.TextMessage;
 
 import com.ibm.websphere.samples.daytrader.interfaces.Trace;
 import com.ibm.websphere.samples.daytrader.interfaces.TradeServices;
@@ -93,7 +93,7 @@ public class DTBroker3MDB implements MessageListener {
       }
       if (command.equalsIgnoreCase("neworder")) {
         /* Get the Order ID and complete the Order */
-        Integer orderID = new Integer(message.getIntProperty("orderID"));
+        Integer orderID = Integer.valueOf(message.getIntProperty("orderID"));
         boolean twoPhase = message.getBooleanProperty("twoPhase");
         boolean direct = message.getBooleanProperty("direct");
         long publishTime = message.getLongProperty("publishTime");
