@@ -16,17 +16,18 @@
 package com.ibm.websphere.samples.daytrader.web.servlet;
 
 import java.io.IOException;
+import java.io.Serial;
 
-import javax.inject.Inject;
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.annotation.WebServlet;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-import javax.servlet.http.PushBuilder;
+import jakarta.inject.Inject;
+import jakarta.servlet.ServletConfig;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.annotation.WebServlet;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+import jakarta.servlet.http.PushBuilder;
 
 import com.ibm.websphere.samples.daytrader.interfaces.Trace;
 import com.ibm.websphere.samples.daytrader.util.Log;
@@ -46,8 +47,9 @@ import com.ibm.websphere.samples.daytrader.util.TradeConfig;
 public class TradeAppServlet extends HttpServlet {
 
   @Inject
-  TradeServletAction tsAction; 
-  
+  TradeServletAction tsAction;
+
+  @Serial
   private static final long serialVersionUID = 481530522846648373L;
 
   /**
@@ -89,7 +91,7 @@ public class TradeAppServlet extends HttpServlet {
    *            Object that encapsulates the response from the servlet
    */
   @Override
-  public void doGet(javax.servlet.http.HttpServletRequest request, javax.servlet.http.HttpServletResponse response) throws ServletException, IOException {
+  public void doGet(jakarta.servlet.http.HttpServletRequest request, jakarta.servlet.http.HttpServletResponse response) throws ServletException, IOException {
     performTask(request, response);
   }
 
@@ -102,7 +104,7 @@ public class TradeAppServlet extends HttpServlet {
    *            Object that encapsulates the response from the servlet
    */
   @Override
-  public void doPost(javax.servlet.http.HttpServletRequest request, javax.servlet.http.HttpServletResponse response) throws ServletException, IOException {
+  public void doPost(jakarta.servlet.http.HttpServletRequest request, jakarta.servlet.http.HttpServletResponse response) throws ServletException, IOException {
     performTask(request, response);
   }
 
@@ -155,7 +157,7 @@ public class TradeAppServlet extends HttpServlet {
     userID = (String) session.getAttribute("uidBean");
 
     if (userID == null) {
-      System.out.println("TradeAppServlet service error: User Not Logged in");
+      IO.println("TradeAppServlet service error: User Not Logged in");
       tsAction.doWelcome(ctx, req, resp, "User Not Logged in");
       return;
     }
@@ -175,7 +177,7 @@ public class TradeAppServlet extends HttpServlet {
       tsAction.doBuy(ctx, req, resp, userID, symbol, quantity);
     } else if (action.equals("sell")) {
       int holdingID = Integer.parseInt(req.getParameter("holdingID"));
-      tsAction.doSell(ctx, req, resp, userID, new Integer(holdingID));
+      tsAction.doSell(ctx, req, resp, userID, Integer.valueOf(holdingID));
     } else if (action.equals("portfolio") || action.equals("portfolioNoEdge")) {
       tsAction.doPortfolio(ctx, req, resp, userID, "Portfolio as of " + new java.util.Date());
     } else if (action.equals("logout")) {
@@ -197,7 +199,7 @@ public class TradeAppServlet extends HttpServlet {
     } else if (action.equals("mksummary")) {
       tsAction.doMarketSummary(ctx, req, resp, userID);
     } else {
-      System.out.println("TradeAppServlet: Invalid Action=" + action);
+      IO.println("TradeAppServlet: Invalid Action=" + action);
       tsAction.doWelcome(ctx, req, resp, "TradeAppServlet: Invalid Action" + action);
     }
   }
