@@ -16,21 +16,22 @@
 package com.ibm.websphere.samples.daytrader.web.servlet;
 
 import java.io.IOException;
+import java.io.Serial;
 import java.io.Serializable;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
 
-import javax.enterprise.context.SessionScoped;
-import javax.enterprise.inject.Any;
-import javax.enterprise.inject.Instance;
-import javax.inject.Inject;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
+import jakarta.enterprise.context.SessionScoped;
+import jakarta.enterprise.inject.Any;
+import jakarta.enterprise.inject.Instance;
+import jakarta.inject.Inject;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
 import com.ibm.websphere.samples.daytrader.interfaces.Trace;
 import com.ibm.websphere.samples.daytrader.interfaces.TradeServices;
@@ -57,6 +58,7 @@ import com.ibm.websphere.samples.daytrader.util.TradeRunTimeModeLiteral;
 @Trace
 public class TradeServletAction implements Serializable {
 
+  @Serial
   private static final long serialVersionUID = 7732313125198761455L;
 
   private TradeServices tAction;  
@@ -84,14 +86,14 @@ public class TradeServletAction implements Serializable {
    * @param results
    *            A short description of the results/success of this web request
    *            provided on the web page
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
    *                user
    *
    */
-  void doAccount(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String results) throws javax.servlet.ServletException,
+  void doAccount(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String results) throws jakarta.servlet.ServletException,
   java.io.IOException {
     try {
 
@@ -144,7 +146,7 @@ public class TradeServletAction implements Serializable {
    *            the HttpRequest object
    * @param resp
    *            the HttpResponse object
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
@@ -152,7 +154,7 @@ public class TradeServletAction implements Serializable {
    *
    */
   void doAccountUpdate(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String password, String cpassword,
-      String fullName, String address, String creditcard, String email) throws javax.servlet.ServletException, java.io.IOException {
+      String fullName, String address, String creditcard, String email) throws jakarta.servlet.ServletException, java.io.IOException {
     String results = "";
 
     // First verify input data
@@ -200,7 +202,7 @@ public class TradeServletAction implements Serializable {
    *            the HttpRequest object
    * @param resp
    *            the HttpResponse object
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
@@ -214,7 +216,7 @@ public class TradeServletAction implements Serializable {
 
     try {
 
-      OrderDataBean orderData = tAction.buy(userID, symbol, new Double(quantity).doubleValue(), TradeConfig.getOrderProcessingMode());
+      OrderDataBean orderData = tAction.buy(userID, symbol, Double.valueOf(quantity).doubleValue(), TradeConfig.getOrderProcessingMode());
 
       req.setAttribute("orderData", orderData);
       req.setAttribute("results", results);
@@ -246,14 +248,14 @@ public class TradeServletAction implements Serializable {
    * @param results
    *            A short description of the results/success of this web request
    *            provided on the web page
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
    *                user
    *
    */
-  void doHome(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String results) throws javax.servlet.ServletException,
+  void doHome(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String results) throws jakarta.servlet.ServletException,
   java.io.IOException {
 
     try {
@@ -281,7 +283,7 @@ public class TradeServletAction implements Serializable {
       // exception but would invalidate a automation run
       Log.error("TradeServletAction.doHome(...)" + "illegal argument, information should be in exception string"
           + "treating this as a user error and forwarding on to a new page", e);
-    } catch (javax.ejb.FinderException e) {
+    } catch (jakarta.ejb.FinderException e) {
       // this is a user error so I will
       // forward them to another page rather than throw a 500
       req.setAttribute("results", results + "\nCould not find account for + " + userID);
@@ -315,21 +317,21 @@ public class TradeServletAction implements Serializable {
    * @param results
    *            A short description of the results/success of this web request
    *            provided on the web page
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
    *                user
    *
    */
-  void doLogin(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String passwd) throws javax.servlet.ServletException,
+  void doLogin(ServletContext ctx, HttpServletRequest req, HttpServletResponse resp, String userID, String passwd) throws jakarta.servlet.ServletException,
   java.io.IOException {
 
     String results = "";
     try {
       // Got a valid userID and passwd, attempt login
       if (tAction==null) {
-        System.out.println("null");          }
+        IO.println("null");          }
       AccountDataBean accountData = tAction.login(userID, passwd);
 
       if (accountData != null) {
@@ -379,7 +381,7 @@ public class TradeServletAction implements Serializable {
    * @param results
    *            A short description of the results/success of this web request
    *            provided on the web page
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
@@ -409,7 +411,7 @@ public class TradeServletAction implements Serializable {
     }
     HttpSession session = req.getSession();
     if (session != null) {
-      session.invalidate();
+      req.logout();
     }
 
     // Added to actually remove a user from the authentication cache
@@ -442,7 +444,7 @@ public class TradeServletAction implements Serializable {
    * @param results
    *            A short description of the results/success of this web request
    *            provided on the web page
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
@@ -500,7 +502,7 @@ public class TradeServletAction implements Serializable {
    *            the HttpRequest object
    * @param resp
    *            the HttpResponse object
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
@@ -550,7 +552,7 @@ public class TradeServletAction implements Serializable {
    *            the HttpRequest object
    * @param resp
    *            the HttpResponse object
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
@@ -568,7 +570,7 @@ public class TradeServletAction implements Serializable {
         AccountDataBean accountData = tAction.register(userID, passwd, fullname, address, email, ccn, new BigDecimal(openBalanceString));
         if (accountData == null) {
           results = "Registration operation failed;";
-          System.out.println(results);
+          IO.println(results);
           req.setAttribute("results", results);
           requestDispatch(ctx, req, resp, userID, TradeConfig.getPage(TradeConfig.REGISTER_PAGE));
         } else {
@@ -580,7 +582,7 @@ public class TradeServletAction implements Serializable {
       } else {
         // Password validation failed
         results = "Registration operation failed, your passwords did not match";
-        System.out.println(results);
+        IO.println(results);
         req.setAttribute("results", results);
         requestDispatch(ctx, req, resp, userID, TradeConfig.getPage(TradeConfig.REGISTER_PAGE));
       }
@@ -607,7 +609,7 @@ public class TradeServletAction implements Serializable {
    *            the HttpRequest object
    * @param resp
    *            the HttpResponse object
-   * @exception javax.servlet.ServletException
+   * @exception jakarta.servlet.ServletException
    *                If a servlet specific exception is encountered
    * @exception javax.io.IOException
    *                If an exception occurs while writing results back to the
